[gd_scene load_steps=18 format=3 uid="uid://drhdnk152r20a"]

[ext_resource type="Script" uid="uid://de7d1p6nne6il" path="res://src/hud/status.gd" id="1_mwn7m"]
[ext_resource type="Texture2D" uid="uid://df3tflfkeemij" path="res://src/assets/imgs/btn0.png" id="2_4j4pv"]
[ext_resource type="Texture2D" uid="uid://c8casboa32g7m" path="res://src/assets/imgs/btn0_disabled.png" id="3_6rdcq"]
[ext_resource type="Texture2D" uid="uid://cqkedhomugfac" path="res://src/assets/imgs/btn1.png" id="3_51w16"]
[ext_resource type="Texture2D" uid="uid://b2wnh0axd2jha" path="res://src/assets/imgs/btn2.png" id="4_usu6v"]
[ext_resource type="Texture2D" uid="uid://g2l2ymeb8cey" path="res://src/assets/imgs/btn3.png" id="5_14xip"]
[ext_resource type="Texture2D" uid="uid://bdyvbiyc0vwna" path="res://src/assets/imgs/btn1_disabled.png" id="5_bf7pw"]
[ext_resource type="Texture2D" uid="uid://b5uq7305qajjh" path="res://src/assets/imgs/btn2_disabled.png" id="7_16025"]
[ext_resource type="Texture2D" uid="uid://bbi61qno0lviv" path="res://src/assets/imgs/btn3_disabled.png" id="9_61574"]

[sub_resource type="InputEventAction" id="InputEventAction_mwn7m"]
action = &"1"

[sub_resource type="Shortcut" id="Shortcut_r3kpl"]
events = [SubResource("InputEventAction_mwn7m")]

[sub_resource type="InputEventAction" id="InputEventAction_i3rrn"]
action = &"2"

[sub_resource type="Shortcut" id="Shortcut_uq054"]
events = [SubResource("InputEventAction_i3rrn")]

[sub_resource type="InputEventAction" id="InputEventAction_4j4pv"]
action = &"9"

[sub_resource type="Shortcut" id="Shortcut_51w16"]
events = [SubResource("InputEventAction_4j4pv")]

[sub_resource type="InputEventAction" id="InputEventAction_usu6v"]
action = &"0"

[sub_resource type="Shortcut" id="Shortcut_14xip"]
events = [SubResource("InputEventAction_usu6v")]

[node name="Status" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_mwn7m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
shortcut = SubResource("Shortcut_r3kpl")
texture_normal = ExtResource("2_4j4pv")
texture_disabled = ExtResource("3_6rdcq")

[node name="TextureButton2" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
shortcut = SubResource("Shortcut_uq054")
texture_normal = ExtResource("3_51w16")
texture_disabled = ExtResource("5_bf7pw")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Money: 0.00"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Loop: 0"

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "180"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
shortcut = SubResource("Shortcut_51w16")
texture_normal = ExtResource("4_usu6v")
texture_disabled = ExtResource("7_16025")

[node name="TextureButton2" type="TextureButton" parent="PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
shortcut = SubResource("Shortcut_14xip")
texture_normal = ExtResource("5_14xip")
texture_disabled = ExtResource("9_61574")

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Money: 0.00"

[node name="Label2" type="Label" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Loop: 0"
